# YaLafi

./: .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  HISTORY.md  MANIFEST.in  README-short.md  README.md  definitions.py  list-of-macros.md  lty.vim  ltyc.vim  main.py  pylint-spelling.txt  pyproject.toml  setup.cfg  setup.py  tex2txt.py  yalafi-emacs  yalafi-grammarous
.github/workflows/: main.yml  prepare-release.yml  publish-release.yml  publish.yml  test.yml
docs/: Makefile  basic-usage.rst  conf.py  editor-integration.rst  index.rst  installation.rst  remaining-old-documentation.rst  yalafi-cmd.rst  yalafi-interfaces.rst  yalafi-shell-cmd.rst
docs/auto-api/: yalafi.defs.rst  yalafi.documentclasses.article.rst  yalafi.documentclasses.book.rst  yalafi.documentclasses.report.rst  yalafi.documentclasses.rst  yalafi.documentclasses.scrartcl.rst  yalafi.documentclasses.scrbook.rst  yalafi.documentclasses.scrreprt.rst  yalafi.handlers.rst  yalafi.mathparser.rst  yalafi.packages.amsmath.rst  yalafi.packages.amsthm.rst  yalafi.packages.babel.rst  yalafi.packages.biblatex.rst  yalafi.packages.circuitikz.rst  yalafi.packages.cleveref.rst  yalafi.packages.geometry.rst  yalafi.packages.glossaries.rst  yalafi.packages.glossaries_extra.rst  yalafi.packages.graphicx.rst  yalafi.packages.hyperref.rst  yalafi.packages.inputenc.rst  yalafi.packages.listings.rst  yalafi.packages.mathtools.rst  yalafi.packages.pgfplots.rst  yalafi.packages.rst  yalafi.packages.subfiles.rst  yalafi.packages.tikz.rst  yalafi.packages.todo.rst  yalafi.packages.unicode_math.rst  yalafi.packages.xcolor.rst  (+18 more)
editors/: VIM.md  lty.vim  ltyc.vim  vlty.vim  yalafi-grammarous
pypi/: README.md
tests/: defs.py  test_1.py  test_1a.py  test_accents.py  test_asterisk.py  test_blank_lines.py  test_comments.py  test_display.py  test_environments.py  test_equations.py  test_error.py  test_extract.py  test_inline.py  test_item.py  test_linebreak.py  test_macros.py  test_modules.py  test_multi_lang.py  test_nesting.py  test_newcommand.py  test_replace.py  test_special.py  test_stderr.py  test_system_macros.py  test_theorem.py  test_unknown.py  test_verbatim.py
yalafi/: __init__.py  __main__.py  defs.py  handlers.py  mathparser.py  parameters.py  parser.py  scanner.py  tex2txt.py  utils.py
(+95 files in other folders)
