[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yalafi"
version = "1.3.1"
authors = [{"name" = "Matthias Baumann"}]
description = "Yet another LaTeX filter"
readme = "README-short.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Text Processing :: Filters",
]

[project.urls]
"Homepage" = "https://github.com/torik42/YaLafi"
"Changelog" = "https://github.com/torik42/YaLafi/blob/master/HISTORY.md"
"Documentation" = "https://github.com/torik42/YaLafi#contents"
"Issue Tracker" = "https://github.com/torik42/YaLafi/issues"

[tool.setuptools]
packages = ["yalafi", "yalafi.shell"]